force-app/main/default/objects/CustomerDataSync__e/CustomerDataSync__e.object-meta.xml
<CustomObject>
    <description>This platform event will replace the SSSW inbound interface that synchs consumer data from SAP CRM to Salesforce</description>
    <label>Customer Data Sync</label>
    <pluralLabel>Customer Data Sync</pluralLabel>
</CustomObject>