force-app/main/default/objects/CustomerDataSync__e/fields/addresses__c.field-meta.xml
<CustomField>
    <fullName>addresses__c</fullName>
    <description>This field will store the JSON structure containing the one or more addresses that pertain to the consumer</description>
    <label>addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>