force-app/main/default/objects/CustomerDataSync__e/fields/apcn__c.field-meta.xml
<CustomField>
    <fullName>apcn__c</fullName>
    <description>Australia Post Customer Number. Allocated by SAP-CRM Customer Master.</description>
    <label>apcn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>