force-app/main/default/objects/CustomerDataSync__e/fields/birthDate__c.field-meta.xml
<CustomField>
    <fullName>birthDate__c</fullName>
    <description>Birth Date of the Consumer</description>
    <label>birthDate</label>
    <type>Date</type>
</CustomField>