force-app/main/default/objects/CustomerDataSync__e/fields/emails__c.field-meta.xml
<CustomField>
    <fullName>emails__c</fullName>
    <description>This field will store the JSON structure containing the one or more emails that pertain to the consumer</description>
    <label>emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>