force-app/main/default/objects/CustomerDataSync__e/fields/integrationServiceModDate__c.field-meta.xml
<CustomField>
    <fullName>integrationServiceModDate__c</fullName>
    <description>The date and time this consumer was last updated in SAP CRM.</description>
    <label>integrationServiceModDate</label>
    <type>DateTime</type>
</CustomField>