force-app/main/default/objects/CustomerDataSync__e/fields/isInactiveCustomer__c.field-meta.xml
<CustomField>
    <fullName>isInactiveCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be set to TRUE when SAP CRM has archived the consumer record.  When this record is set to TRUE, the consumer must go through the Salesforce Archive proces</description>
    <label>isInactiveCustomer</label>
    <type>Checkbox</type>
</CustomField>