force-app/main/default/objects/CustomerDataSync__e/fields/legalFirstName__c.field-meta.xml
<CustomField>
    <fullName>legalFirstName__c</fullName>
    <description>First Name of the Consumer</description>
    <label>legalFirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>