force-app/main/default/objects/CustomerDataSync__e/fields/legalLastName__c.field-meta.xml
<CustomField>
    <fullName>legalLastName__c</fullName>
    <label>legalLastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>