force-app/main/default/objects/CustomerDataSync__e/fields/legalMarketingOptIn__c.field-meta.xml
<CustomField>
    <fullName>legalMarketingOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consumer Opt In for Legal Marketing</description>
    <label>legalMarketingOptIn</label>
    <type>Checkbox</type>
</CustomField>