force-app/main/default/objects/CustomerDataSync__e/fields/loa__c.field-meta.xml
<CustomField>
    <fullName>loa__c</fullName>
    <description>Level of Assurance allocated to the Consumer</description>
    <label>loa</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>