force-app/main/default/objects/CustomerDataSync__e/fields/phones__c.field-meta.xml
<CustomField>
    <fullName>phones__c</fullName>
    <description>This field will store the JSON structure containing the one or more phone numbers that pertain to the consumer</description>
    <label>phones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>