force-app/main/default/objects/CustomerDataSync__e/fields/preferredName__c.field-meta.xml
<CustomField>
    <fullName>preferredName__c</fullName>
    <description>Preferred Name of the Consumer</description>
    <label>preferredName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>