force-app/main/default/objects/CustomerDataSync__e/fields/salesforceRecordID__c.field-meta.xml
<CustomField>
    <fullName>salesforceRecordID__c</fullName>
    <description>The Salesforce Account Record ID of the consumer as provided by SAP CRM</description>
    <label>salesforceRecordID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>