force-app/main/default/objects/CustomerDataSync__e/fields/winningMasterAPCN__c.field-meta.xml
<CustomField>
    <fullName>winningMasterAPCN__c</fullName>
    <description>This field will be used when the consumer record is to be merged with another consumer record.  This record is the losing consumer record and this field will specify the APCN of the winning consumer record</description>
    <label>winningMasterAPCN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>